# datev-splitter

./: .flake8  .gitignore  .pdm.toml  CHANGELOG.md  README.md  pdf_extract.py  pyproject.toml
.github/workflows/: main.yml
datev_splitter/: __init__.py  pdf_extract.py
docs/: How_to_develop.md
tests/: conftest.py  test_pdf_extract.py
