[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Christoph Becker", email = "christoph.becker@exb.de"},
]
dependencies = [
    "pip>=22.3.1",
    "PyMuPDF>=1.21.1",
    "loguru>=0.6.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
