[project]
name = "Datev-Splitter"
version = "Splits Datev-Reports into single pdf files per Personalnummer."
description = ""
authors = [
    {name = "Christoph Becker", email = "christoph.becker@exb.de"},
]
dependencies = [
    "pip>=22.3.1",
    "PyMuPDF>=1.21.1",
    "loguru>=0.6.0",
    "flake8>=6.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}


[project.scripts]
datev_splitr = "datev_splitter:datev_split"


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
